# Project-Insight-Part-3

./: .gitignore  README.md  pyproject.toml
pages/: main.py
src/methods/: aws_functions.py  env_initialize.py  schedules.json
src/pages/: add_user_page.py  components.py  confirm_add_user_page.py  initialization_page.py  initialization_setup_credentials.py  initialization_update_credentials.py  main.py  send_sms_page.py  test.py  view_edit_user_page.py
src/project_insight_part_3/methods/: aws_functions.py  compliance_methods.py  env_initialize.py  homepage_figures.py  schedules.json
src/project_insight_part_3/pages/: add_user_page.py  compliance_report_page.py  components.py  confirm_add_user_page.py  delete_user_page.py  individual_compliance_check.py  initialization_page.py  main.py  send_sms_page.py  view_edit_user_page.py
