[project]
name = "project-insight-part-3"
version = "0.1.0"
description = "Project INSIGHT Part 3 Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "boto3>=1.42.5",
    "nicegui>=3.3.1",
    "polars>=1.36.0",
    "pywebview>=6.1",
]

[project.scripts]
insight-part3 = "src.main:main"

[tool.hatch.build]
sources = ["src"]