[project]
name = "project-insight-part-3"
version = "0.2.3a"
description = "Project INSIGHT Part 3 Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "boto3>=1.42.5",
    "nicegui>=3.3.1",
    "polars>=1.36.0",
    "pywebview>=6.1",
]

[project.scripts]
insight-part3 = "project_insight_part_3.pages.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/project_insight_part_3"]