[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "project-insight-part-3"
version = "0.2.4b"
description = "Project INSIGHT Part 3 Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "boto3>=1.42.5",
    "fastapi==0.124.4",
    "nbformat>=5.10.4",
    "nicegui>=3.3.1",
    "plotly>=6.5.0",
    "polars>=1.36.0",
    "pywebview>=6.1",
]

[project.scripts]
insight-part3 = "project_insight_part_3.pages.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/project_insight_part_3"]

[tool.hatch.build.targets.wheel.force-include]
"src/project_insight_part_3/methods/schedules.json" = "project_insight_part_3/methods/schedules.json"

[tool.hatch.build.targets.sdist]
include = [
  "src/project_insight_part_3/**/*.json",
  "README.md",
  "pyproject.toml",
]
